--- a/react-poc/src/Styles/EventStyles.module.css
+++ b/react-poc/src/Styles/EventStyles.module.css
@@ -1,10 +1,16 @@
-.eventwrap{
-    border: 2px solid black;
-    width:300px;
-    height: 250px;
+.eventwrap {
+    display: flex;
+    flex-direction: column;
+    columns: 2 auto;
 }
 
-.flex{
+.flex {
     display: flex;
     flex-direction: row;
+}
+
+.img {
+    width: 45%;
+    height: 250px;
+    margin: 10px;
 }
